# Self-Reflective-RAG

./: .gitignore  CONFIG.py  pyproject.toml  self_rag.ipynb
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
